--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "note-taker",
   "version": "1.0.0",
-  "description": "",
+  "description": "This is opnly a test!",
   "main": "server.js",
   "scripts": {
     "devstart": "nodemon server.js"
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.18.2",
+    "uuid": "^9.0.0"
   },
   "keywords": []
 }
